fetch conflicts once